Starting widnow abstraction

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Neato/vendor/spdlog"]
 	path = Neato/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Neato/vendor/GLFW"]
+	path = Neato/vendor/GLFW
+	url = https://github.com/nhoughto5/glfw.git
