Fixed mouse release

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=550,2
+Pos=441,23
 Size=550,680
+Collapsed=0
+
+[Window][Example: Console]
+Pos=60,60
+Size=520,600
 Collapsed=0
 
