--- a/Neato/Neato.vcxproj.filters
+++ b/Neato/Neato.vcxproj.filters
@@ -46,6 +46,9 @@
     <ClInclude Include="src\Neato\ImGui\ImGuiLayer.h">
       <Filter>Neato\ImGui</Filter>
     </ClInclude>
+    <ClInclude Include="src\Neato\Input.h">
+      <Filter>Neato</Filter>
+    </ClInclude>
     <ClInclude Include="src\Neato\Layer.h">
       <Filter>Neato</Filter>
     </ClInclude>
@@ -62,9 +65,14 @@
     <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
       <Filter>Platform\OpenGL</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h">
+      <Filter>Platform\Windows</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
+    <ClInclude Include="src\Neato\KeyCodes.h" />
+    <ClInclude Include="src\Neato\MouseButtonCodes.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Neato\Application.cpp">
@@ -85,6 +93,9 @@
     <ClCompile Include="src\NeatoPCH.cpp" />
     <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
       <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp">
+      <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
