--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 	path = Neato/vendor/imgui
 	url = https://github.com/nhoughto5/imgui.git
 	ignore = dirty
+[submodule "Neato/vendor/glm"]
+	path = Neato/vendor/glm
+	url = https://github.com/g-truc/glm
