--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,12 +4,34 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=369,14
-Size=550,680
+Pos=0,19
+Size=215,351
 Collapsed=0
+DockId=0x00000001,0
 
 [Window][Example: Console]
-Pos=60,60
-Size=520,600
+Pos=1069,19
+Size=211,701
 Collapsed=0
+DockId=0x00000006,0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Log]
+Pos=0,372
+Size=1067,348
+Collapsed=0
+DockId=0x00000004,0
+
+[Docking][Data]
+DockSpace       ID=0xFA06BC56 Pos=156,137 Size=1280,701 Split=X
+  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=1067,701 Split=Y
+    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,351 Split=X
+      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=215,701 SelectedTab=0x080FC883
+      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=850,701 CentralNode=1
+    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,348 SelectedTab=0xBF126D42
+  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=211,701 SelectedTab=0x46B5E99C
 
