--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,10 +4,9 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=0,19
+Pos=482,81
 Size=215,351
 Collapsed=0
-DockId=0x00000001,0
 
 [Window][Example: Console]
 Pos=1069,19
@@ -16,7 +15,6 @@ Collapsed=0
 DockId=0x00000006,0
 
 [Window][DockSpace Demo]
-Pos=0,0
 Size=1280,720
 Collapsed=0
 
@@ -26,12 +24,15 @@ Size=1067,348
 Collapsed=0
 DockId=0x00000004,0
 
+[Window][Test]
+Pos=60,60
+Size=50,48
+Collapsed=0
+
 [Docking][Data]
-DockSpace       ID=0xFA06BC56 Pos=156,137 Size=1280,701 Split=X
-  DockNode      ID=0x00000005 Parent=0xFA06BC56 SizeRef=1067,701 Split=Y
-    DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1280,351 Split=X
-      DockNode  ID=0x00000001 Parent=0x00000003 SizeRef=215,701 SelectedTab=0x080FC883
-      DockNode  ID=0x00000002 Parent=0x00000003 SizeRef=850,701 CentralNode=1
-    DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1280,348 SelectedTab=0xBF126D42
-  DockNode      ID=0x00000006 Parent=0xFA06BC56 SizeRef=211,701 SelectedTab=0x46B5E99C
+DockSpace     ID=0xFA06BC56 Pos=156,137 Size=1280,701 Split=X
+  DockNode    ID=0x00000005 Parent=0xFA06BC56 SizeRef=1067,701 Split=Y
+    DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1280,351 CentralNode=1
+    DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1280,348 SelectedTab=0xBF126D42
+  DockNode    ID=0x00000006 Parent=0xFA06BC56 SizeRef=211,701 SelectedTab=0x46B5E99C
 
