Done shader abstraction

--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -4,8 +4,7 @@ Size=400,400
 Collapsed=0
 
 [Window][ImGui Demo]
-ViewportPos=1381,635
-ViewportId=0x080FC883
+Pos=735,194
 Size=215,351
 Collapsed=0
 
@@ -28,6 +27,11 @@ DockId=0x00000004,0
 [Window][Test]
 Pos=60,60
 Size=50,48
+Collapsed=0
+
+[Window][Settings]
+Pos=60,60
+Size=339,54
 Collapsed=0
 
 [Docking][Data]
